--- a/src/main/resources/com/example/music/views/Home.fxml
+++ b/src/main/resources/com/example/music/views/Home.fxml
@@ -1,14 +1,80 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
+<?import org.kordamp.ikonli.javafx.FontIcon?>
 
-<VBox xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="com.example.music.controllers.HomeController"
-            prefHeight="400.0" prefWidth="600.0">
+<ScrollPane fitToWidth="true" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1"
+            fx:controller="com.example.music.controllers.HomeController">
+    <content>
+        <VBox styleClass="home-container" spacing="20">
+            <!-- Your Library Section -->
+            <VBox spacing="10">
+                <Label text="Your Library" styleClass="section-title"/>
 
-</VBox>
+                <GridPane fx:id="librarySongsContainer" styleClass="songs-grid">
+                    <rowConstraints>
+                        <RowConstraints percentHeight="50"/>
+                        <RowConstraints percentHeight="50"/>
+                    </rowConstraints>
+                    <columnConstraints>
+                        <ColumnConstraints percentWidth="33.33"/>
+                        <ColumnConstraints percentWidth="33.33"/>
+                        <ColumnConstraints percentWidth="33.33"/>
+                    </columnConstraints>
+                </GridPane>
+
+                <HBox alignment="CENTER" spacing="10">
+                    <Button fx:id="libraryPrevBtn" text="" styleClass="pagination-button"
+                            onAction="#previousLibraryPage">
+                        <graphic>
+                            <FontIcon iconLiteral="fa-angle-left" iconSize="16" styleClass="play-icon"/>
+                        </graphic>
+                    </Button>
+                    <Label fx:id="libraryPageLabel" text="Page 1"/>
+                    <Button fx:id="libraryNextBtn" text="" styleClass="pagination-button"
+                            onAction="#nextLibraryPage">
+                        <graphic>
+                            <FontIcon iconLiteral="fa-angle-right" iconSize="16" styleClass="play-icon"/>
+                        </graphic>
+                    </Button>
+                </HBox>
+            </VBox>
+
+            <!-- Recently Played Section -->
+            <VBox spacing="10">
+                <Label text="Recently Played" styleClass="section-title"/>
+
+                <GridPane fx:id="recentSongsContainer" styleClass="songs-grid">
+                    <rowConstraints>
+                        <RowConstraints percentHeight="50"/>
+                        <RowConstraints percentHeight="50"/>
+                    </rowConstraints>
+                    <columnConstraints>
+                        <ColumnConstraints percentWidth="33.33"/>
+                        <ColumnConstraints percentWidth="33.33"/>
+                        <ColumnConstraints percentWidth="33.33"/>
+                    </columnConstraints>
+                </GridPane>
+
+                <HBox alignment="CENTER" spacing="10">
+                    <Button fx:id="recentPrevBtn" text="" styleClass="pagination-button"
+                            onAction="#previousRecentPage">
+                        <graphic>
+                            <FontIcon iconLiteral="fa-angle-left" iconSize="16" styleClass="play-icon"/>
+                        </graphic>
+                    </Button>
+                    <Label fx:id="recentPageLabel" text="Page 1"/>
+                    <Button fx:id="recentNextBtn" text="" styleClass="pagination-button"
+                            onAction="#nextRecentPage">
+                        <graphic>
+                            <FontIcon iconLiteral="fa-angle-right" iconSize="16" styleClass="play-icon"/>
+                        </graphic>
+                    </Button>
+                </HBox>
+            </VBox>
+        </VBox>
+    </content>
+</ScrollPane>
