--- a/src/main/resources/com/example/music/views/Login.fxml
+++ b/src/main/resources/com/example/music/views/Login.fxml
@@ -11,8 +11,7 @@
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.shape.Circle?>
-
-<!--<?import org.kordamp.ikonli.javafx.FontIcon?>-->
+<?import org.kordamp.ikonli.javafx.FontIcon?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefWidth="400.0" styleClass="auth-container" stylesheets="@../css/auth.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.music.controllers.LoginController">
 
@@ -60,19 +59,19 @@
             <Label styleClass="divider-label" text="─ OR CONNECT WITH ─" />
             <HBox alignment="CENTER" spacing="20">
                 <Button styleClass="social-button">
-<!--                    <graphic>-->
-<!--                        <FontIcon iconLiteral="fa-google" iconSize="24"/>-->
-<!--                    </graphic>-->
+                    <graphic>
+                        <FontIcon iconLiteral="fa-google" iconSize="24"/>
+                    </graphic>
                 </Button>
                 <Button styleClass="social-button">
-<!--                    <graphic>-->
-<!--                        <FontIcon iconLiteral="fa-facebook" iconSize="24"/>-->
-<!--                    </graphic>-->
+                    <graphic>
+                        <FontIcon iconLiteral="fa-facebook" iconSize="24"/>
+                    </graphic>
                 </Button>
                 <Button styleClass="social-button">
-<!--                    <graphic>-->
-<!--                        <FontIcon iconLiteral="fa-apple" iconSize="24"/>-->
-<!--                    </graphic>-->
+                    <graphic>
+                        <FontIcon iconLiteral="fa-apple" iconSize="24"/>
+                    </graphic>
                 </Button>
             </HBox>
         </VBox>
